--- a/index.html
+++ b/index.html
@@ -27,25 +27,8 @@
 <main class="content-wrapper">
   <header class="white-text-container section-container">
     <div class="text-center">
-      <h1>Добро пожаловать на сайт Метереористов Энтузиастов!</h1>
-      <p>Web designer</p>
-      <p>
-        <a class="fa-icon fa-icon-2x" href="https://facebook.com/" title="">
-          <i class="fa fa-facebook"></i>
-        </a>
-        <a class="fa-icon fa-icon-2x" href="https://twitter.com/" title="">
-          <i class="fa fa-twitter"></i>
-        </a>
-        <a class="fa-icon fa-icon-2x" href="https://dribbble.com/" title="">
-          <i class="fa fa-dribbble"></i>
-        </a>
-        <a class="fa-icon fa-icon-2x" href="https://www.linkedin.com/" title="">
-          <i class="fa fa-linkedin"></i>
-        </a>
-        <a class="fa-icon fa-icon-2x" href="https://vimeo.com/" title="">
-          <i class="fa fa-vimeo"></i>
-        </a>
-      </p>
+      <h1>Добро пожаловать на сайт Космологов Энтузиастов!</h1>
+      <p>Официальный вебсайт космологов Челябинска</p>
     </div>
   </header>
 
@@ -59,15 +42,15 @@
 
         <div class="card">
           <div class="card-block">
-            <h2>About me</h2>
+            <h2>О нас</h2>
             <div class="row">
-              <div class="col-md-4">
-                <p><img src="./assets/images/img-01.jpg" class="img-responsive" alt=""></p>
-              </div>
+             
               <div class="col-md-8">
 
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-              <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Мы группа энтузиастов, что заинтересованы в покорении тайн космоса, мы присутпили к свеому проекта после удивительного проишесвтия, произошедшем в Челябинске, 15 февраля 2013 года, на нас упал Метеорит!</p>
+              <p>Это проишетсвие потрясло всех жителей Челябинска до глубины души, некоторые люди даже считают это событие самым знаменательным за всю их жизнь, и мы не позволим угаснуть искре энтузиазма миллинов Челябинцев, возродив скрытый внутри них интерес к космосу!</p>
+              <p>После открытия существования чёрной дыры 10 апреля 2019 года, всё мировое сообщество было подверженно "гравитации" этого необычайно важного явления, фотографии этого уникального небесного тела, были распространены повсеместно, не было ни одного человека который хотя бы раз не взглянул на это космическое чудо. Это открытие сподвигнуло миллионы людей на изучение космоса и возродила интерес публики к проявлениям космоса.</p>
+              <p>Исходя из всего вышеперечисленного, вы уже могли  догадаться что нашей первостепенной задачей явялется возрождения интереса, не только России, но и всего мирового сообщетсва к Челябинскому метеориту!</p>
 
               </div>
             </div>
@@ -76,12 +59,12 @@
 
         <div class="card">
           <div class="card-block">
-            <h2>Projects</h2>
+            <h2>Наши проекты</h2>
             <div class="row">
               <div class="col-md-4">
-                <img src="./assets/images/img-02.jpg" class="img-responsive" alt="">
-                <h3 class="h5">Amelia App</h3>
-                <p>June 2017</p>
+                <img src="https://s9.stc.all.kpcdn.net/share/i/12/10356528/wr-960.jpg" alt="Кусок метеорита выставленный в краеведческом музее">
+                <h3 class="h5">Экскурсии на тему происхождения Челябинского метеорита</h3>
+                <p>Декабрь 2020</p>
               </div>
               <div class="col-md-4">
                 <img src="./assets/images/img-03.jpg" class="img-responsive" alt="">
