--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h2>Наши проекты</h2>
             <div class="row">
               <div class="col-md-4">
-                <img src="https://s9.stc.all.kpcdn.net/share/i/12/10356528/wr-960.jpg" alt="Кусок метеорита выставленный в краеведческом музее">
+                <img src="https://s9.stc.all.kpcdn.net/share/i/12/10356528/wr-960.jpg" width="300" height="300" alt="Кусок метеорита выставленный в краеведческом музее">
                 <h3 class="h5">Экскурсии на тему происхождения Челябинского метеорита</h3>
                 <p>Декабрь 2020</p>
               </div>
