--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
        
         <div class="card">
           <div class="card-block">
-            <h2>Contact</h2>
+            <h2>Связь</h2>
             <form action="" class="reveal-content">
               <div class="form-group">
                 <input type="email" class="form-control" id="email" placeholder="Email">
@@ -116,21 +116,7 @@
         
         <p>©All right reserved. Design <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
         <p>
-          <a class="fa-icon fa-icon-2x" href="https://facebook.com/" title="">
-            <i class="fa fa-facebook"></i>
-          </a>
-          <a class="fa-icon fa-icon-2x" href="https://twitter.com/" title="">
-            <i class="fa fa-twitter"></i>
-          </a>
-          <a class="fa-icon fa-icon-2x" href="https://dribbble.com/" title="">
-            <i class="fa fa-dribbble"></i>
-          </a>
-          <a class="fa-icon fa-icon-2x" href="https://www.linkedin.com/" title="">
-            <i class="fa fa-linkedin"></i>
-          </a>
-          <a class="fa-icon fa-icon-2x" href="https://vimeo.com/" title="">
-            <i class="fa fa-vimeo"></i>
-          </a>
+        Контактный номер +79642417967
         </p>
       </div>
     </div>
