--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h2>Наши проекты</h2>
             <div class="work-experience">
               <small class="date">2020</small>
-              <h3 class="h5 date-title"> Наш краеугольный проект - Запетличи себя в истории!</h3>            
+              <h3 class="h5 date-title"> Наш краеугольный проект - Запечатли себя в истории!</h3>            
               <p>Если вы желаете внести неимоверный вклад в космологию, и обладаете ценной находкой в виде куска метеорита или фотографии, запечатляющей падение небесного тела на поверхность земли, то мы предоставляем вам возможность увековечить его в нашем музее. Для этого вам нужно предоставить вашу находку нам, и при потвреждении достоверности экспертной комисии ваше открытие может стать достопремечательностью музея, и вы будете иметь право на его наименование, и даже указать то что вы являлись его обладателем, тем самым вы сможете не только внести вклад в научное сообщество, но и сохранить память о вашем вкладе в развитии космлогии для будущих поколений!</p>
             </div>        
           </div>
